loading the free odus from the server

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 text-center">
-                 <p>Mo juba <b>OLODUMARE</b>, Ajagunmale, Awonomaja, Odu Ologbooje, Egan, Gbogbo Eleye, Irinwo Imale, Igba Imale, Okanlenirinwo Imale, Otalelugba Imale, Oduduwa, Gbogbo Oba Alade. Mo juba Eegun, mo si juba gbogbo Ajunilo.</p>
+                 <p>Mo juba <b>OLODUMARE</b>, Ajagunmale, Awonomaja, Odu Ologbooje, Egan, Gbogbo Eleye, Irinwo Imale, Igba Imale, Okanlenirinwo Imale, Otalelugba Imale, Oduduwa, Gbogbo Oba Alade. Mo juba Egungun, mo si juba gbogbo Ajunilo.</p>
             </div>
         </div>
         <div class="row">
@@ -169,13 +169,13 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 <script src="https://js.paystack.co/v1/inline.js"></script>
-<script type="text/javascript" src="public/js/odus.js"></script>
-<script type="text/javascript" src="public/js/chatbot.js"></script>
-<script type="text/javascript" src="public/js/audioVideo.js"></script>
-<script type="text/javascript" src="public/js/knowledgeBase.js"></script>
 <script type="text/javascript" src="public/js/config.js"></script>
 <script type="text/javascript" src="public/js/utils.js"></script>
 <script type="text/javascript" src="public/js/main.js"></script>
+<script type="text/javascript" src="public/js/chatbot.js"></script>
+<script type="text/javascript" src="public/js/audioVideo.js"></script>
+<script type="text/javascript" src="public/js/knowledgeBase.js"></script>
+<script type="text/javascript" src="public/js/odus.js"></script>
 
 </body>
 </html>
