--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8 text-center">
-                 <p>Mo juba <b>OLODUMARE</b>, Ajagunmale, Awonomaja, Odu Ologbooje, Egan, Gbogbo Eleye, Egungun, Irinwo Imale, Igba Imale, Okanlenirinwo Imale, Otalelugba Imale, Oduduwa. Mo juba Gbogbo Oba Alade, mo si juba gbogbo Ajunilo.</p>
+                 <p>Mo juba <b>OLODUMARE</b>, Ajagunmale, Awonomaja, Odu Ologbooje, Egan, Gbogbo Eleye, Eegun, Irinwo Imale, Igba Imale, Okanlenirinwo Imale, Otalelugba Imale, Oduduwa. Mo juba gbogbo Oba Alade, mo si juba gbogbo Ajunilo.</p>
             </div>
         </div>
         <div class="row">
@@ -176,6 +176,6 @@
 <script type="text/javascript" src="public/js/audioVideo.js"></script>
 <script type="text/javascript" src="public/js/knowledgeBase.js"></script>
 <script type="text/javascript" src="public/js/odus.js"></script>
-
+</script>
 </body>
 </html>
