--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ancestra - Be Illuminated</title>
     <meta name="author" content="Ancestra" />
-    <meta name="description" content="Ancestra Speaks is a platform providing deep insights into Ifa divination and Numerology." />
+    <meta name="description" content="Ancestra is a platform providing deep insights into African Spirituality." />
     <meta name="keywords" content="Ancestra, Ifa, Olodumare, Ajagunmale, Awonomaja, ahanran moja, ahanranmoja, ahanranmaja, Odu, Orunmila, Eleye, Numerology, Irawo, Ayewo, Ibere, Ibeere, Divination, Divinition, Yoruba, Yoruba Divination, Ifa Divination, Orisa, Orisha, Eewo, ewo, taboo, Odu ifa, Itefa, Isefa, Knowing Oneself, Finding Oneself, Self discovery, Self mastery, Life path number, Energy, Vibration, Esu, Babalawo, Iyanifa, Apapo Odu, Illuminati, Illuminated, Igbo Odu, Igba Odu, Orisala, Orishanla, Sango, Ogun, Obatala, Osun, Egun, Eegun, Egungun, Akala, Akalamagbo, Opele, Opon Ifa, Ebora, Ejiogbe, Oyeku, Iwori, Odi, Idi, Irosun, Owonrin, Obara, Okanran, Ogunda, Osa, Ika, Oturupon, Otura, Irete, Ose, Ofun, Ose Otura, Osa Owonrin, Osa Ogbe, Irosun Ika, Esu, Eshu, Esu odara, Esu elegbara, Egbe, Numerology, Astrology, Creation story, How the world started"/>
     <link rel="canonical" href="https://ancestra.aokfoundation.org/" />
     <meta property="og:locale" content="en_US" />
