--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
                           </div>
                           <iframe id="videoFrame" width="100%" height="90%" frameborder="0" allowfullscreen></iframe>
                         </div>
+
+                        <!-- Revelation Modal -->
+                        <div id="meaningModal" class="revelationmodal" style="display:none;">
+                          <div class="modal-content">
+                            <span class="close" onclick="closeModal()">&times;</span>
+                            <div id="modalContent"></div>
+                          </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
