updated the birthdate section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <label>Select your birth date</label>
                     <div id="birthdate-box">
-                        <input type="date" id="birthdate" placeholder="dd/mm/yyyy" /><br/><br/>
+                        <input type="text" id="birthdate" placeholder="dd/mm/yyyy" onfocus="(this.type='date')" /><br/><br/>
                         <button class="btn btn-md btn-default app-btn" id="determine-btn">Reveal Message</button>
                     </div>
                     <p><b>OR</b></p>
