fixed minor flicker bug with date

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
                     </div>
                     <label>Select your birth date</label>
                     <div id="birthdate-box">
-                        <input type="text" id="birthdate" placeholder="dd/mm/yyyy" onfocus="(this.type='date')" /><br/><br/>
+                        <input
+                          id="birthdate"
+                          type="text"
+                          placeholder="dd/mm/yyyy"
+                          onfocus="switchToDate(this)"
+                          onblur="switchBackToText(this)"
+                        /><br/><br/>
                         <button class="btn btn-md btn-default app-btn" id="determine-btn">Reveal Message</button>
                     </div>
                     <p><b>OR</b></p>
