--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                           id="birthdate"
                           type="text"
                           placeholder="dd/mm/yyyy"
-                          onfocus="(this.type='date')"
+                          onfocus="(this.type='date'); (this.click())"
                           onblur="(this.type='text')"
                         /><br/><br/>
                         <button class="btn btn-md btn-default app-btn" id="determine-btn">Reveal Message</button>
