more fix with inline style

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                           type="text"
                           placeholder="dd/mm/yyyy"
                           onfocus="this.type='date'; setTimeout(() => this.showPicker && this.showPicker(), 0)"
-                          onblur="if (!this.value) this.type='text'"
+                          onblur="if (!this.value) this.type='text'" style="width: 80%; max-width: 250px; padding: 10px; font-size: 16px; border: 1px solid #ccc; border-radius: 5px;"
                         /><br/><br/>
                         <button class="btn btn-md btn-default app-btn" id="determine-btn">Reveal Message</button>
                     </div>
