--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="container-fluid" id="printArea">
            
-        <center><a href="/" style="color: green; text-decoration: none;"><img src="public/img/logo.png" style="height:75px" alt="Ancestra Logo"/></a></center>
+        <center><a href="/" style="color: green; text-decoration: none;"><img src="public/img/ancestra-logo.png" style="height:100px" alt="Ancestra Logo"/></a></center>
      
         <div class="row">
             <div class="col-md-2"></div>
@@ -175,9 +175,7 @@
                        &nbsp; <button class="app-btn" id="send-btn" onclick="sendMessage()">Send</button>
                     </div>
                 </div>
-
                 <button id="chatbot-toggle" onclick="toggleChatbot()">💬</button>
-
             </div>
         </footer>
     </div>
