changed loader to a bird

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body id="body">
         <!-- Loader -->
     <div id="preloader">
-        <img style="margin-top:50vh;" src="public/img/loader.gif" />
+        <!-- <img style="margin-top:50vh;" src="public/img/loader.gif" /> -->
     </div>
     <div class="container-fluid" id="printArea">
            
