--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- Loader -->
     <div id="preloader">
         <!-- <img style="margin-top:50vh;" src="public/img/loader.gif" /> -->
+        <center><p style="margin-top: 40vh">Loading...</p></center>
     </div>
     <div class="container-fluid" id="printArea">
            
