updated odu to okanran ofun

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                     <div id="chatbot-messages">
                         <div class="chat-message-wrapper align-left">
-                            <div class="chat-message bot-message">Hello! How can I assist you today?</div>
+                            <div class="chat-message bot-message"></div>
                         </div>
                     </div>
 
